--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -20,7 +20,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.approvaltests</groupId>
+            <artifactId>approvaltests</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
